--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,5 +38,9 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
+
+    <div class="login-link">
+        Not a member? <a href="{{path('app_register')}}">Sign Up</a>
+    </div>
 </form>
 {% endblock %}
