--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,21 +4,21 @@
 
 {% block body %}
 <div class="center">
-    <h1 {# class="h3 mb-3 font-weight-normal" #}>Login</h1>
+    <h1>Login</h1>
 
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
 
-        {% if app.user %}
+{#         {% if app.user %}
             <div class="mb-3">
                 You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
             </div>
-        {% endif %}
+        {% endif %} #}
         
         <div class="text-field">
-            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>        
+            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" au8tocomplete="email" required autofocus>        
             <span></span>
             <label for="inputEmail">Email</label>
         </div>
